Move script's logic into a dedicated file

--- a/project_4_signup.html
+++ b/project_4_signup.html
@@ -10,12 +10,18 @@
                  - Signup">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
+  <!-- External CSS -->
   <link rel="stylesheet" 
         href="https://fonts.googleapis.com/css?family=Raleway:400,300italic">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/showcase.css">
   <link rel="stylesheet" href="css/topBar.css">
   <link rel="stylesheet" href="css/project_4_signup.css">  
+
+  <!-- JavaScript -->
+  <script src="js/validator.js"></script>
+  <script src="js/project_4_signup_validation.js"> </script>
+
 </head>
 <body>
 
@@ -86,166 +92,6 @@
              required>
       <input class="sign-up__submit" type="submit" value="Submit">
   </form>
-
-  <script src="js/validator.js"></script>
-  <script>
-      var valid       = Validators;
-      var signupForm  = document.getElementById('signup');
-      var doc = document;
-
-      var inputs = {
-        firstName:  valid.getNode(doc.getElementById('firstName'),'firstName'),
-        lastName:   valid.getNode(doc.getElementById('lastName'),'LastName'),
-        email:      valid.getNode(doc.getElementById('email')),
-        birthD:     valid.getNode(doc.getElementById('birthD'), 'dateOfBirth'),
-        password:   valid.getNode(doc.getElementById('password', 'password'))
-      }
-
-      // ------ Helper function ------ 
-
-      function calculateAge(date) {
-
-          if (!valid.isDate(date)) return false;
-
-          var birthDate = new Date(date);
-          var today     = new Date();
-
-          function diffInDays(d1, d2){
-
-            //the absolute difference of d1 and d2 in milli-seconds   
-            var diffInMilliSec = Math.abs(d1.getTime() - d2.getTime());
-            var milliSecInAday = 24 * 60 * 60 * 1000; //milli-seconds in a day
-
-            return Math.floor(diffInMilliSec/milliSecInAday);
-          }
-
-          return Math.floor(diffInDays(birthDate, today) / 365);
-      }
-
-      // ------ END helper function ------ 
-
-
-      /*
-       * For each input, defines a particular Validator function that must 
-       * be satisfied to proceed further. 
-       */
-
-      inputs.firstName.setValidator(function(elem){
-
-          var constr = elem.constr;
-          var value  = elem.node.value;
-
-          if (valid.isLength(value, 2)) {
-              elem.node.setCustomValidity(constr.value);
-          } else {
-              elem.resetCustomValidity();
-          }
-
-      });
-
-      inputs.lastName.setValidator(function(elem){
-
-          var constr = elem.constr;
-          var value  = elem.node.value;
-
-          if (valid.isLength(value, 2)) {
-              elem.node.setCustomValidity(constr.value);
-          } else {
-              elem.resetCustomValidity();
-          }
-
-      });
-
-      inputs.email.setValidator(function(elem){
-
-          var constr = elem.constr;
-          var value  = elem.node.value;
-
-          try {
-              if (!valid.isEmailAddress(value)) {
-                  elem.node.setCustomValidity(constr.value);
-              } else {
-                  elem.resetCustomValidity();
-              }
-          } catch (err) {}
-
-      });
-
-      inputs.birthD.setValidator(function(elem){
-
-          var constr = elem.constr;
-          var value  = elem.node.value;
-
-          try { 
-              if (!valid.isBeforeToday(value)) {
-                  elem.node.setCustomValidity(constr.value);
-              } else if (calculateAge(value) < 16) {
-                  elem.node.setCustomValidity('The minimum age is 16');
-              } else {
-                  elem.resetCustomValidity();
-              }
-          } catch (err) {
-                elem.node.setCustomValidity(constr.value);
-          }
-
-      });
-
-      inputs.password.setValidator(function(elem){
-
-          var constr = elem.constr;
-          var value  = elem.node.value;
-
-          try {
-              if (valid.isLength(value, 6)) {
-                  elem.node.setCustomValidity(constr.value);
-              } else {
-                  elem.resetCustomValidity();
-              }
-          } catch (err) {
-                elem.node.setCustomValidity(constr.value);
-          }
-
-      });
-
-
-      /* Sets an initial custom validity for every input 
-       * All the indicated inputs are not valid by default
-       */
-
-      for (var input in inputs) {
-        if (inputs.hasOwnProperty(input)) {
-          if (inputs[input].constr.isRequired) {
-            inputs[input].elem.node.setCustomValidity(
-                                              inputs[input].constr.constrValue);
-          }
-          
-          // Using a closure, it defines a custom event listener for every
-          // single inputs object
-          (function(input) {
-            input.node.addEventListener('change', function (event) {
-              
-                var constr  = input.constr;
-                input.setInvalidClass();
-                constr.check();
-            })
-          })(inputs[input]);
-        }
-      }
-
-      signupForm.addEventListener('submit', function (event) {
-
-      // Check the inputs validity. If at least one input is invalid, stop
-      // the form
-      for (var input in inputs) {
-          if (inputs.hasOwnProperty(input)) {
-              if (!inputs[input].node.validity.valid) {
-                  event.preventDefault();
-              }
-          }
-      }
-
-      }, false);
-  </script>
 
 </body>
 </html>
