Import validator.js instead of utilities.js

--- a/project_5.html
+++ b/project_5.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="css/topBar.css">
   <link rel="stylesheet" href="css/calculator.css">
 
-  <script src="js/utilities.js"></script>
+  <script src="js/validator.js"></script>
   <script src="js/calculator.js"></script>
 </head>
 <body>
