--- a/project_5.html
+++ b/project_5.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="css/topBar.css">
   <link rel="stylesheet" href="css/calculator.css">
 
+
   <script src="js/validator.js"></script>
   <script src="js/calculator.js"></script>
 </head>
@@ -44,106 +45,100 @@
 
     <!-- PROJECT CONTENT -->
 
-  <div id="calculator">
-    <div id="result__wrapper">
-      <p id="operation">100+5</p>
-      <p id="result">105</p>
+  <div class="calculator" id="calculator">
+    <div class="result__wrapper" id="result__wrapper">
+      <p class="operation operation--green" id="operation"></p>
+      <p class="result" id="result"></p>
     </div>
 
-    <div id="controls__wrapper">
-      <ul class="control__list" id="top-controls">
+    <div class="controls__wrapper" id="controls__wrapper">
+      <ul class="control__list control__list--top" id="top-controls">
         <li>
-          <input  class="button clear-controls"
-              id="del"
-              name="del"
-              type="button"
-              value="DEL">
+          <input class="button button--del clear-controls"
+                 type="button"
+                 value="DEL">
         </li>
         <li>
-          <input  class="button clear-controls"
-                id="clear"
-                name="clear"
-                type="button"
-                value="CLEAR">
+          <input class="button button--clear clear-controls"
+                 type="button"
+                 value="CLEAR">
         </li>
       </ul>
-      <ul class="control__list" id="numbers">
-        <li>
+      <ul class="control__list control__list--numbers" id="numbers">
+        <li class="list__item--rounded">
           <input  class="button"
                 id="7"
                 name="7"
                 type="button"
                 value="7">
         </li>
-        <li>
+        <li class="list__item--rounded">
           <input  class="button"
                 id="8"
                 name="8"
                 type="button"
                 value="8">
         </li>
-        <li>
+        <li class="list__item--rounded">
           <input  class="button"
                 id="9"
                 name="9"
                 type="button"
                 value="9">
         </li>
-        <li>
+        <li class="list__item--rounded">
           <input  class="button"
                 id="4"
                 name="4"
                 type="button"
                 value="4">
         </li>
-        <li>
+        <li class="list__item--rounded">
           <input  class="button"
                 id="5"
                 name="5"
                 type="button"
                 value="5">
         </li>
-        <li>
+        <li class="list__item--rounded">
           <input  class="button"
                 id="6"
                 name="6"
                 type="button"
                 value="6">
         </li>
-        <li>
+        <li class="list__item--rounded">
           <input  class="button"
                 id="1"
                 name="1"
                 type="button"
                 value="1">
         </li>
-        <li>
+        <li class="list__item--rounded">
           <input  class="button"
                 id="2"
                 name="2"
                 type="button"
                 value="2">
         </li>
-        <li>
+        <li class="list__item--rounded">
           <input  class="button"
                 id="3"
                 name="3"
                 type="button"
                 value="3">
         </li>
-        <li>
+        <li class="list__item--rounded">
           <input  class="button double"
                 id="0"
                 name="0"
                 type="button"
                 value="0">
         </li>
-        <li>
-          <input  class="button double"
-                id="comma"
-                name="period"
-                type="button"
-                value="&#46;">
+        <li class="list__item--rounded">
+          <input class="button button--period double"
+                 type="button"
+                 value="&#46;">
         </li>
       </ul>
       <ul class="control__list control__list--operations" id="right-controls">
@@ -152,7 +147,7 @@
                   id="div"
                   name="div"
                   type="button"
-                  value="&#247;"
+                  value="&#247;">
           </li>
           <li>
             <input  class="button oper-controls hover-controls"
@@ -176,15 +171,201 @@
                   value="&#43;">
           </li>
           <li class="equal">
-            <input  class="button hover-controls"
-                  id="equal"
-                  name="equal"
-                  type="button"
-                  value="&#61;">
+            <input class="button button--equal hover-controls"
+                   type="button"
+                   value="&#61;">
           </li>
       </ul>
     </div>
   </div>
+
+  <div class="calculator calculator--2" id="calculator-2">
+    <div class="result__wrapper" id="result__wrapper-2">
+      <p class="operation operation--white" id="operation-2"></p>
+      <p class="result result--green" id="result-2"></p>
+    </div>
+    <div class="controls__wrapper">
+      <ul class="control__list control__list--top" id="top-controls-2">
+        <li>
+          <input class="button button--del clear-controls"
+                 type="button"
+                 value="DEL">
+        </li>
+        <li>
+          <input class="button button--clear clear-controls"
+                 type="button"
+                 value="CLEAR">
+        </li>
+      </ul>
+      <ul class="control__list control__list--numbers" id="numbers-2">
+        <li>
+          <input class="button" type="button" value="7">
+        </li>
+        <li>
+          <input class="button" type="button" value="8">
+        </li>
+        <li>
+          <input class="button" type="button" value="9">
+        </li>
+        <li>
+          <input class="button" type="button" value="4">
+        </li>
+        <li>
+          <input class="button" type="button" value="5">
+        </li>
+        <li>
+          <input class="button" type="button" value="6">
+        </li>
+        <li>
+          <input class="button" type="button" value="1">
+        </li>
+        <li>
+          <input class="button" type="button" value="2">
+        </li>
+        <li>
+          <input class="button" type="button" value="3">
+        </li>
+        <li>
+          <input class="button double" type="button" value="0">
+        </li>
+        <li>
+          <input class="button button--period double"
+                 type="button"
+                 value="&#46;">
+        </li>
+      </ul>
+      <ul class="control__list control__list--operations" id="right-controls-2">
+        <li>
+            <input  class="button oper-controls hover-controls"
+                  id="div-2"
+                  name="div-2"
+                  type="button"
+                  value="&#247;">
+          </li>
+          <li>
+            <input  class="button oper-controls hover-controls"
+                  id="mult-2"
+                  name="mult-2"
+                  type="button"
+                  value="&#42;">
+          </li>
+          <li>
+            <input  class="button oper-controls hover-controls"
+                  id="sub-2"
+                  name="sub-2"
+                  type="button"
+                  value="&#45;">
+          </li>
+          <li>
+            <input  class="button oper-controls hover-controls"
+                  id="add-2"
+                  name="add-2"
+                  type="button"
+                  value="&#43;">
+          </li>
+          <li class="equal">
+            <input class="button button--equal hover-controls"
+                   type="button"
+                   value="&#61;">
+          </li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="calculator calculator--3" id="calculator-3">
+    <div class="result__wrapper" id="result__wrapper-3">
+      <p class="operation operation--white" id="operation-3"></p>
+      <p class="result result--yellow" id="result-3"></p>
+    </div>
+    <div class="controls__wrapper">
+      <ul class="control__list control__list--top" id="top-controls-3">
+        <li>
+          <input class="button button--del clear-controls"
+                 type="button"
+                 value="DEL">
+        </li>
+        <li>
+          <input class="button button--clear clear-controls"
+                 type="button"
+                 value="CLEAR">
+        </li>
+      </ul>
+      <ul class="control__list control__list--numbers" id="numbers-3">
+        <li>
+          <input class="button" type="button" value="7">
+        </li>
+        <li>
+          <input class="button" type="button" value="8">
+        </li>
+        <li>
+          <input class="button" type="button" value="9">
+        </li>
+        <li>
+          <input class="button" type="button" value="4">
+        </li>
+        <li>
+          <input class="button" type="button" value="5">
+        </li>
+        <li>
+          <input class="button" type="button" value="6">
+        </li>
+        <li>
+          <input class="button" type="button" value="1">
+        </li>
+        <li>
+          <input class="button" type="button" value="2">
+        </li>
+        <li>
+          <input class="button" type="button" value="3">
+        </li>
+        <li>
+          <input class="button double" type="button" value="0">
+        </li>
+        <li>
+          <input  class="button button--period double"
+                id="period-3"
+                name="period-3"
+                type="button"
+                value="&#46;">
+        </li>
+      </ul>
+      <ul class="control__list control__list--operations" id="right-controls-3">
+        <li>
+            <input  class="button oper-controls hover-controls"
+                  id="div-3"
+                  name="div-3"
+                  type="button"
+                  value="&#247;">
+          </li>
+          <li>
+            <input  class="button oper-controls hover-controls"
+                  id="mult-3"
+                  name="mult-3"
+                  type="button"
+                  value="&#42;">
+          </li>
+          <li>
+            <input  class="button oper-controls hover-controls"
+                  id="sub-3"
+                  name="sub-3"
+                  type="button"
+                  value="&#45;">
+          </li>
+          <li>
+            <input class="button oper-controls hover-controls"
+                   type="button"
+                   value="&#43;">
+          </li>
+          <li class="equal">
+            <input class="button button--equal hover-controls"
+                   type="button"
+                   value="&#61;">
+          </li>
+      </ul>
+    </div>
+  </div>
+
+
 
 </body>
 </html>
